--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Bio Staden </title>
+        <title>Journalism Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body id="body">
         <h1 id="heading1">
-            BioStaden - Göteborg</h1>
+            LISA - JOURNALISM PORTFOLIO</h1>
         <p class="subtitle">
-            <span>MOVIES FOR ALL </span>
+            <span> SAMPLES OF MY WORK </span>
 
         </p>
 
@@ -25,14 +25,31 @@
     <div class="row" id="films">
         <div class="leftcolumn">
           <div class="card">
-            <h1>Lord Of The Rings</h2>
-            <h2>The Lord of the Rings is an epic high-fantasy novel by English author and scholar JRR</h5>
-            <div class="galary" style="height:500px; width: 100px;"><img src="img/lordoftherings.jpeg" alt="news1" width="400" height="400"></div>
-            <p>A select mob and his loyal companions take on the task of destroying The Only Ring, and destroying together with the wizard Gandalf, dwarves, elves and humans, Sauron, the ruler of darkness in Mordor.</p>
-          </div>
-          <div class="card">mo
-            <h1>Hobbit</h2>
-            <h2>Hobbit is a film trilogy based on JRR Tolkien's novel Bilbo - A Hobbit's Adventure from 1937. The first film, Hobbit: An Unexpected Journey, had its cinema premiere on December 12, 2012, the second, Hobbit: Smaug's Wilderness, had on December 11, 2013 and the third , Hobbit: Femhäraslaget, had on December 9, 2014</h5>
+            <h1>SWEDEN MINORITIES MISS OUT MILLIONS </h2>
+            <h2>Sweden’s minorities miss outon millions whilestategrants are
+              spent mainly“on administration”</h5>
+            <div class="galary" style="height:500px; width: 100px;"><img src="img/minority1.png" alt="news1" width="500" height="500"></div>
+            <p>AYear after year, Swedish municipalities pile up the state money allocated to support minorities while
+              international community alarms about poor state of their rights in this Scandinavian country
+              Sari Ebesoh’s from Gothenburg is a mother of an international family: she’s Finnish, her husband is Nigerian,
+              and their children are growing up in Sweden. With more than three languages spoken at home, Sari wants
+              her kids to be fluent in Finnish as well. Despite this right provided by law, the woman is almost unable to
+              count on schooling for it.
+              Her two young daughters, five and eight years old, didn’t have Finnish classes at their home school. So in
+              order to attend afternoon mother tongue classes, they had to take a tram to Frölunda, a troubled area in the
+              south of Gothenburg. “I cannot let them go during the afternoons by themselves. It was really a struggle”,
+              Sari explains, adding that she wasn’t able to give children lifts due to her tight work schedule.
+              Swedish municipalities can’t afford sustainable mother tongue tuition, though the state costs for granting
+              minorities rights are growing every year. Sweden is home to large populations of Finns, Sami, Tornedal,
+              Romani, and Yiddish which constitute up to eight per cent of Sweden’s ten-million population. Council of
+              Europe had been criticizing the country’s approach to its minority policy for the past decade and a half.
+              
+              Since 2010, the Minority Act granted them enhanced rights including language learning, mother tongue pre-
+              school tuition, and elderly care. The municipalities that have chosen to be part of administrative areas for the
+              
+              minorities receive an annual state grant based on their total population, which is 66 million SEK on average.
+              Over the course since the Act came into effect, all Swedish municipalities have piled up 52 million SEK
+              altogether.</h5>
             <div class="galary" style="height:500px; width: 100px;"><img src="img/hobbit.jpeg" alt="news2" width="400" height="400"></div>
             <p>Bilbo Baggins (Martin Freeman) lives a simple life with his fellow hobbits in the shire, until the wizard Gandalf (Ian McKellen) arrives and convinces him to join a group of dwarves on a quest to reclaim the kingdom of Erebor. The journey takes Bilbo on a path through treacherous lands swarming with orcs, goblins and other dangers, not the least of which is an encounter with Gollum (Andy Serkis) and a simple gold ring that is tied to the fate of Middle Earth in ways Bilbo cannot even fathom..</p>
           </div>
