--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
     <div class="topnav">
         <a class="home" href="#hem">Hem</a>
-        <a href="#films">News Article</a>
-        <a href="#contactus">Contact Me</a>
+        <a href="#films">News articles</a>
+        <!-- <a href="#contactus">Contact Me</a> -->
     </div>
 
 
@@ -83,19 +83,19 @@
          
 
         </div>
-        <div class="rightcolumn">
+        <!-- <div class="rightcolumn">
             <div class="card">
                 <h3>Galary Images</h3>
                 <div class="galary"><img src="img/galary1.jpg" alt="nature 1" width="400" height="400"></div><br>
                 <div class="galary"><img src="img/galary2.jpeg" alt="nature2" width="400" height="400"></div><br>
                 <div class="galary"><img src="img/galary3.jpeg" alt="nature3" width="400" height="400"></div>
               </div>
-        </div>
+        </div> -->
       </div>
 
     <!-- Kontakt form -->
 
-    <div class="container" id="contactus">
+    <!-- <div class="container" id="contactus">
       <div style="text-align: center">
         <h2>Kontakta Oss</h2>
         <p>Lämna dina medellande</p>
@@ -128,13 +128,13 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
-    <div class="footer">
+    <!-- <div class="footer">
         <h2>Copyright,BioStaden , 2022 </h2>
-    </div>
+    </div> -->
 
       <!-- <div class="container" id="#contact">
         <div style="text-align: center">
